--- a/package.json
+++ b/package.json
@@ -2,11 +2,12 @@
   "name": "acme-website",
   "private": true,
   "version": "0.0.0",
-  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "cms": "node json-to-html.js",
+    "postbuild": "npm run cms"
   },
   "devDependencies": {
     "vite": "^5.4.1"
